# NGU-cpp-labs

./: hello.h
Lab2(StackCalc)/src/test/java/stackcalculator/commands/stackcalculator/commands/: DefineTest.java
OSI_labs_5sem/lab1/: lab1.c
OSI_labs_5sem/lab2/: lab2.c
OSI_labs_5sem/lab3/: lab3.c
OSI_labs_5sem/lab4/: lab4.c
OSI_labs_5sem/lab5/: lab5.c
OSI_labs_5sem/lab7/: lab7.c
lab1/: CMakeLists.txt  TESTs.cpp  TritSet.cpp  TritSet.h  catch.h
lab2/: CMakeLists.txt  Parser.cpp  Parser.h  Workflow.cpp  Workflow.h  main.cpp
lab2/Factory/: DumpFactory.cpp  DumpFactory.h  GrepFactory.cpp  GrepFactory.h  IFactory.h  ReadFileFactory.cpp  ReadFileFactory.h  ReplaceFactory.cpp  ReplaceFactory.h  SortFactory.cpp  SortFactory.h  WriteFileFactory.cpp  WriteFileFactory.h
lab2/Workers/: Dump.cpp  Dump.h  Grep.cpp  Grep.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  Worker.cpp  Worker.h  WriteFile.cpp  WriteFile.h
lab3/: CMakeLists.txt  GamePresenter.h
lab_0/: CMakeLists.txt  frequency.csv  input.txt  main.cpp
task0/: CMakeLists.txt
