cmake_minimum_required(VERSION 3.14)
project(PROJECT_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(PROJECT_3 ConsoleViewConstants.h ConsoleView.h ConsoleView.cpp ConsoleGamer.h ConsoleGamer.cpp GraphicView.h GraphicView.cpp GameView.h GameView.cpp Gamer.h Gamer.cpp GamePresenter.h GamePresenter.cpp Game.h Game.cpp OptimalGamer.h OptimalGamer.cpp optionparser.h Parser.h Parser.cpp RandomGamer.h RandomGamer.cpp Source.cpp Shot.h Shot.cpp Ship.h Ship.cpp)